datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String     @id @default(cuid())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  email     String     @unique
  password  String
  firstname String?
  lastname  String?
  posts     Post[]
  role      Role
  Recipe    Recipe[]
  DayToEat  DayToEat[]
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

enum Role {
  ADMIN
  USER
}

model Ingredient {
  id               String             @id @default(cuid())
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt
  name             String             @db.VarChar(255)
  kcal             Int                @default(0) @db.Integer
  mainType         MainType
  classification   Classification
  RecipeIngredient RecipeIngredient[]
}

enum Classification {
  vegetable
  fruit
  meat
  fish
  egg
  dairy
  cereals
  rice
  pasta
  oil
  nuts
  spices
  herbs
  alcohol
  other
}

enum MainType {
  protein
  carbohydrates
  fat
  sugar
  fiber
}

model Recipe {
  id          String             @id @default(cuid())
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt
  name        String             @db.VarChar(255)
  description String             @db.VarChar(255)
  ingredients RecipeIngredient[]
  author      User?              @relation(fields: [authorId], references: [id])
  authorId    String?
  dayToEat    DayToEat[]
}

model RecipeIngredient {
  recipeId     String
  ingredientId String
  amount       Int        @db.Integer
  recipe       Recipe     @relation(fields: [recipeId], references: [id])
  ingredient   Ingredient @relation(fields: [ingredientId], references: [id])

  @@id([recipeId, ingredientId])
}

model DayToEat {
  date       DateTime
  recipeType RecipeType
  recipe     Recipe     @relation(fields: [recipeId], references: [id])
  recipeId   String
  user       User       @relation(fields: [userId], references: [id])
  userId     String

  @@id([recipeId, userId, date, recipeType])
}

enum RecipeType {
  breakfast
  lunch
  dinner
  snack
}
