//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  Recipe Recipe [not null]
  DayToEat DayToEat [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Ingredient {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  kcal Int [not null, default: 0]
  mainType MainType [not null]
  classification Classification [not null]
  RecipeIngredient RecipeIngredient [not null]
}

Table Recipe {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String [not null]
  ingredients RecipeIngredient [not null]
  author User
  authorId String
  dayToEat DayToEat [not null]
}

Table RecipeIngredient {
  recipeId String [not null]
  ingredientId String [not null]
  amount Int [not null]
  recipe Recipe [not null]
  ingredient Ingredient [not null]

  indexes {
    (recipeId, ingredientId) [pk]
  }
}

Table DayToEat {
  date DateTime [not null]
  recipeType RecipeType [not null]
  recipe Recipe [not null]
  recipeId String [not null]
  user User [not null]
  userId String [not null]

  indexes {
    (recipeId, userId, date, recipeType) [pk]
  }
}

Enum Role {
  ADMIN
  USER
}

Enum Classification {
  vegetable
  fruit
  meat
  fish
  egg
  dairy
  cereals
  rice
  pasta
  oil
  nuts
  spices
  herbs
  alcohol
  other
}

Enum MainType {
  protein
  carbohydrates
  fat
  sugar
  fiber
}

Enum RecipeType {
  breakfast
  lunch
  dinner
  snack
}

Ref: Post.authorId > User.id

Ref: Recipe.authorId > User.id

Ref: RecipeIngredient.recipeId > Recipe.id

Ref: RecipeIngredient.ingredientId > Ingredient.id

Ref: DayToEat.recipeId > Recipe.id

Ref: DayToEat.userId > User.id